--- a/conjur-pam-ldap/templates/default/ldap.seed.erb
+++ b/conjur-pam-ldap/templates/default/ldap.seed.erb
@@ -2,7 +2,7 @@
 libnss-ldapd    libnss-ldapd/clean_nsswitch     boolean false
 # Name services to configure:
 # Choices: aliases, ethers, group, hosts, netgroup, networks, passwd, protocols, rpc, services, shadow
-libnss-ldapd    libnss-ldapd/nsswitch   multiselect     group, passwd, shadow
+libnss-ldapd    libnss-ldapd/nsswitch   multiselect     passwd, shadow
 # Enable shadow lookups through NSS?
 libpam-ldapd    libpam-ldapd/enable_shadow      boolean true
 # PAM profiles to enable:
